force-app/main/default/objects/OrgLimit__c/OrgLimit__c.object-meta.xml
<CustomObject>
    <description>Organization Limit information retrieved during polling for the org search functionality</description>
    <label>OrgLimit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgLimits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>