force-app/main/default/objects/OrgLimit__c/fields/MaxAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaxAllowed__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Total Limit allowed</description>
    <label>MaxAllowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>