force-app/main/default/objects/OrgLimit__c/fields/RemainingForLimit__c.field-meta.xml
<CustomField>
    <fullName>RemainingForLimit__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Remaining for limit</description>
    <label>RemainingForLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>